--- a/style/responsive.css
+++ b/style/responsive.css
@@ -14,6 +14,12 @@
     .carrosel-series{
         margin-top: 5px;
     }
+    
+    .botaoadicional{
+        margin-left: 60px;
+        width: 100px;
+        
+    }
 }
 
 @media screen and (min-width:1000px){
