--- a/style/main.css
+++ b/style/main.css
@@ -133,6 +133,8 @@ header nav a:hover{
 
 .botaoadicional{
     display: flex;
+    flex-direction: row;
+    max-width: 65%;
     justify-content: flex-end;
-    margin-right: 239px;
+    margin-left: 0px;
 }
