--- a/style/responsive.css
+++ b/style/responsive.css
@@ -22,8 +22,17 @@
     }
 }
 
-@media screen and (min-width:1000px){
+@media screen and (min-width:1100px){
     .sinopse{
         width: 70%;
     }
 }
+
+@media screen and (min-width:1300px){
+    .sinopse{
+        width: 70%;
+    }
+    .botaoadicional{    
+        width: 56%;
+    }
+}  
